($Id: ChangeLog,v 1.52 2001-06-25 15:18:00 rufustfirefly Exp $)

2001-06-25  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/afpd/auth.c, etc/afpd/main.c, etc/afpd/uam.c,
	etc/uams/uams_dhx_passwd.c, etc/uams/uams_passwd.c,
	include/atalk/uam.h: TRU64 authentication patch to allow
	any security scheme to be used on the TRU64 side (Burkhard
	Schmidt)

2001-06-20  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in: check for linux/quota.h before enabling
	QUOTACTL_WRAPPER (Joe Clarke) 

	* acconfig.h, configure.in, include/atalk/util.h,
	libatalk/util/module.c: removed NO_DLFCN_H in favor of
	ifndef HAVE_DLFCN_H (Jeff)

	* configure.in, etc/afpd/*.{c,h}, include/atalk/util.h:
	major autoconf fixes for afpd, nicer commenting, etc (Jeff)

2001-06-19  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/afpd/file.c, etc/afpd/parse_mtab.c, etc/afpd/parse_mtab.h,
	etc/atalkd/route.h, etc/atalkd/rtmp.c, etc/papd/headers.c,
	etc/papd/magics.c, libatalk/asp/asp_tickle.c: patch for
	fixed DID calculation in etc/afpd/file.c, FreeBSD errors and
	other miscellany (Joe Clarke) 

	* minor patches and fixes to the aforementioned files, warning
	fixes with GCC, etc (Jeff)

2001-06-18  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, etc/uams/Makefile.am,
	etc/uams/uams_krb4/Makefile.am: patch #433952 from Sebastian
	Rittau to move UAM authentication to use libtool

	* configure.in, bin/afppasswd/Makefile.am, config/Makefile.am,
	contrib/shell_utils/Makefile.am, distrib/initscripts/Makefile.am,
	etc/afpd/Makefile.am, etc/afpd/nls/Makefile.am,
	etc/atalkd/Makefile.am, etc/papd/Makefile.am,
	man/man5/Makefile.am, man/man8/Makefile.am: patch #433906
	to move to pkgconfdir for package config files (Sebastian Rittau)

	* configure.in: fixed error that caused --with-did not to function
	properly

2001-06-13  Sam Noble <ns@shadow.org>
	* etc/papd/{printcap,ppd,lp,file,comment}.h:
	added #include <sys/cdefs.h> to these headers so that __P gets
	properly defined on platforms like TRU64
